--- a/src/views/users/showMovie.ejs
+++ b/src/views/users/showMovie.ejs
@@ -115,11 +115,11 @@
         <div class="modal-body">
                 <div class="form-group">
                 <label for="exampleFormControlInput1">Rating</label>
-                <input type="number" class="form-control" min="0" max="5" id="exampleFormControlInput1" placeholder="Rating">
+                <input name = "rating" type="number" class="form-control" min="0" max="5" id="exampleFormControlInput1" placeholder="Rating">
                 </div>
                 <div class="form-group">
                 <label for="exampleFormControlTextarea1">Review</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <textarea name = "review" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
         </div>
         <div class="modal-footer">
